--- a/cs-client/src/app/components/login-form/login-form.component.css
+++ b/cs-client/src/app/components/login-form/login-form.component.css
@@ -16,6 +16,7 @@ form {
   border: solid 1px #ddd;
   border-radius: 0.5em;
   font-family: 'Source Sans Pro', sans-serif;
+  background-image: url('../../vendors/img/bg.png')
 }
 
 form .svgContainer {
