--- a/cs-client/src/app/components/login-form/login-form.component.html
+++ b/cs-client/src/app/components/login-form/login-form.component.html
@@ -110,6 +110,6 @@
     <input type="password" id="password" class="password" />
   </div>
   <div class="inputGroup inputGroup3">
-    <button id="login">Log in</button>
+    <button id="login" [routerLink]="['./home']">Login</button>
   </div>
 </form>
