--- a/cs-client/src/app/components/home/home.component.html
+++ b/cs-client/src/app/components/home/home.component.html
@@ -1,4 +1,1 @@
-<p>
-  home works!
-</p>
-<button [routerLink]="['/login']" routerLinkActive="active">Login</button>
+<button [routerLink]="['/login']" routerLinkActive="active" class="btn btn-primary">Login</button>
